--- a/main.html
+++ b/main.html
@@ -8,8 +8,7 @@
 <body>
 
    <div class="player">
-<!--      <video class="player__video viewer" src="download.mp4"></video> -->
-	 <video class="player__video viewer" src="https://vimeo.com/347119375"></video>
+     <video class="player__video viewer" src="download.mp4"></video>
      <div class="player__controls">
        <div class="progress">
         <div class="progress__filled"></div>
